refactor dataloaders, model, trainer (use lightning)

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ numpy
 pandas
 scikit-learn
 ipykernel
-transformers
 torch
+torchmetrics
+transformers
+pytorch-lightning
+tensorboard
 wandb
+python-dotenv
